--- a/login.html
+++ b/login.html
@@ -1,248 +1,140 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>Project.PAW - 로그인</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
-  <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-  <script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js"></script>
-  <script>Kakao.init('9917e1abbf40830145f513dc1121157b');</script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Project.PAW</title>
+  <link rel="stylesheet" href="styles.css" />
+  <script type="module">
+    import { auth, signOut } from "./js/firebase.js";
+
+    // 로그아웃 버튼 이벤트 등록
+    window.logout = async () => {
+      try {
+        await signOut(auth);
+        alert("로그아웃 완료! 다시 로그인 해주세요.");
+        location.href = "index.html"; // 홈으로 이동
+      } catch (e) {
+        console.error("로그아웃 실패:", e);
+      }
+    };
+  </script>
   <style>
     body {
-      background-color: #f8f9fa;
-      font-family: 'Noto Sans KR', sans-serif;
+      margin: 0;
+      font-family: "Noto Sans KR", sans-serif;
+      background-color: #fff;
+      color: #333;
     }
-    .login-box {
-      max-width: 960px;
-      margin: 60px auto;
-      background: #fff;
-      border-radius: 20px;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
-      overflow: hidden;
-    }
-    .login-image {
-      background: url('images/login_cat2.jpg') center/cover no-repeat;
-      min-height: 400px;
-    }
-    .login-form {
-      padding: 40px;
-    }
-    .sns-buttons {
+    header {
       display: flex;
-      justify-content: center;
-      gap: 20px;
-    }
-    .login-button {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-      font-size: 22px;
+      padding: 1rem 2rem;
+      background: #ffffff;
+      border-bottom: 1px solid #eee;
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+    header h1 {
+      font-size: 1.5rem;
+      color: #222;
+    }
+    nav {
+      display: flex;
+      gap: 1rem;
+    }
+    nav a, nav button {
+      background: none;
+      border: none;
       cursor: pointer;
-      transition: transform 0.2s;
-      color: #fff;
+      font-size: 1rem;
+      color: #333;
+      text-decoration: none;
+      transition: color 0.2s;
     }
-    .login-button:hover {
-      transform: scale(1.1);
+    nav a:hover, nav button:hover {
+      color: #ff6b6b;
     }
-    .google { background: #db4437; }
-    .kakao  { background: #fee500; color: #000; font-weight: bold; }
-    .naver  { background: #1ec800; }
+    .hero {
+      text-align: center;
+      padding: 4rem 2rem;
+      background: linear-gradient(to right, #fff, #fdfdfd);
+    }
+    .hero h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      color: #666;
+    }
   </style>
-
-<!-- Custom Font -->
-
-<style>
-  body {
-    font-family: 'SUIT', sans-serif;
-    background-color: #fefefe;
-    color: #212529;
-  }
-
-  .btn-custom {
-    background-color: #007bff;
-    color: white;
-    padding: 12px 24px;
-    font-weight: 600;
-    border-radius: 8px;
-    transition: all 0.3s ease;
-  }
-
-  .btn-custom:hover {
-    background-color: #0056b3;
-    transform: scale(1.05);
-  }
-
-  .card {
-    border: none;
-    border-radius: 1rem;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-    transition: all 0.3s ease-in-out;
-  }
-
-  .card:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 8px 16px rgba(0,0,0,0.08);
-  }
-
-  h2, h3, h4, h5 {
-    font-weight: 700;
-  }
-</style>
-
-<link href="https://fonts.googleapis.com/css2?family=Pretendard&display=swap" rel="stylesheet">
-
-
-<style>
-  body {
-    font-family: 'Pretendard', 'SUIT', sans-serif;
-    color: #333;
-  }
-
-  footer {
-    background-color: #f8f9fa !important;
-    color: #6c757d !important;
-  }
-
-  footer a {
-    color: #6c757d !important;
-  }
-
-  footer a:hover {
-    color: #000 !important;
-  }
-</style>
-
-  <meta name="theme-color" content="#6552FF">
-  <meta property="og:title" content="Project.PAW">
-  <meta property="og:description" content="기부보다 연결에 집중한 구조 플랫폼">
-  <meta property="og:image" content="images/login_cat2.jpg">
-  <link rel="icon" href="images/favicon.svg">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
-    <div class="container-fluid">
-      <a class="navbar-brand fw-bold d-flex align-items-center gap-2" href="index.html"><img src="images/logo_wordmark.svg" alt="Project.PAW" height="24"></a>
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">🏠 홈</a></li>
-        <li class="nav-item"><a class="nav-link" href="project_list.html">📋 후원하기</a></li>
-        <li class="nav-item"><a class="nav-link" href="create.html">➕ 프로젝트 등록</a></li>
-        <li class="nav-item"><a class="nav-link active" href="login.html">🔑 로그인</a></li>
-      
-     <li class="nav-item">
-      <a class="nav-link" href="about.html">
-       ℹ️ About
-      </a>
-     </li>
+  <header>
+    <h1>🐾 Project.PAW</h1>
+    <nav>
+      <a href="project_list.html">후원하기</a>
+      <a href="create.html">등록하기</a>
+      <a href="about.html">About</a>
+      <!-- 로그아웃 버튼 -->
+      <button onclick="logout()">로그아웃</button>
+    </nav>
+  </header>
 
-    </ul>
+  <section class="hero">
+    <h2>도움은 본능, 연결은 선택</h2>
+    <p>망설임을 용기로 바꾸는 플랫폼</p>
+  </section>
+
+  <main style="padding:2rem; max-width:1200px; margin:auto;">
+    <h3 style="margin-bottom:1rem;">최근 등록된 프로젝트</h3>
+    <div id="projects" style="display:grid; grid-template-columns:repeat(auto-fit, minmax(280px,1fr)); gap:1.5rem;">
+      <!-- JS로 카드 로드 -->
     </div>
-  </nav>
+  </main>
 
-  <div class="container login-box row g-0">
-    <div class="col-sm-6 login-image d-none d-md-block"></div>
-    <div class="col-sm-6 login-form">
-      <h3 class="text-center mb-4">SNS 계정으로 로그인</h3>
-      <div class="sns-buttons">
-        <div class="login-button google" id="google-login-btn"><i class="fab fa-google"></i></div>
-        <div class="login-button kakao" id="kakao-login-btn">K</div>
-        <div class="login-button naver" id="naver-login-btn">N</div>
-      </div>
-      <div id="naverIdLogin" style="display: none;"></div>
-    </div>
-  </div>
+  <footer style="margin-top:3rem; padding:2rem; background:#fafafa; text-align:center; font-size:0.9rem; color:#666;">
+    <p>© 2025 Project.PAW</p>
+    <p>
+      <a href="about.html">About</a> | 
+      <a href="login.html">로그인</a>
+    </p>
+  </footer>
 
-  <script>
-    document.getElementById('kakao-login-btn').addEventListener('click', function () {
-      Kakao.Auth.login({
-        scope: 'profile_nickname,account_email',
-        success: function (authObj) {
-          Kakao.API.request({
-            url: '/v2/user/me',
-            success: function (res) {
-              alert(`${res.kakao_account.profile.nickname}님 환영합니다!`);
-              if (window.opener) {
-                window.opener.localStorage.setItem("isLoggedIn", "true");
-                window.opener.location.href = 'https://projectpaw.co.kr';
-                window.close();
-              } else {
-                localStorage.setItem("isLoggedIn", "true");
-                window.location.assign('https://projectpaw.co.kr');
-              }
-            },
-            fail: function (error) {
-              alert('사용자 정보 요청 실패');
-            }
-          });
-        },
-        fail: function (err) {
-          alert('카카오 로그인 실패');
-        }
-      });
-    });
+  <script type="module">
+    import { db } from "./js/firebase.js";
+    import { collection, getDocs, orderBy, query, limit } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-    window.onload = function () {
-      google.accounts.id.initialize({
-        client_id: "656866984778-8jsv71j60fsjf4d34d0hav83i4ktf8u7.apps.googleusercontent.com",
-        callback: handleCredentialResponse
-      });
-      document.getElementById('google-login-btn').addEventListener('click', function () {
-        google.accounts.id.prompt();
-      });
-      const naverLogin = new naver.LoginWithNaverId({
-        clientId: "SO07cKed8aScWuacSBqk",
-        callbackUrl: window.location.origin + "/naver_callback.html",
-        isPopup: true,
-        loginButton: { color: "green", type: 3, height: 40 }
-      });
-      naverLogin.init();
-      document.getElementById('naver-login-btn').addEventListener('click', function () {
-        document.querySelector('#naverIdLogin a').click();
-      });
-    };
+    const projectContainer = document.getElementById("projects");
 
-    function handleCredentialResponse(response) {
-      const jwt = response.credential;
-      const payload = JSON.parse(atob(jwt.split('.')[1]));
-      alert(`${payload.name || payload.email}님 환영합니다!`);
-      localStorage.setItem("isLoggedIn", "true");
-      window.location.assign('https://projectpaw.co.kr');
+    async function loadProjects() {
+      const q = query(collection(db, "projects"), orderBy("createdAt", "desc"), limit(6));
+      const snapshot = await getDocs(q);
+      snapshot.forEach(doc => {
+        const p = doc.data();
+        const card = document.createElement("div");
+        card.style.border = "1px solid #eee";
+        card.style.borderRadius = "12px";
+        card.style.overflow = "hidden";
+        card.style.background = "#fff";
+        card.style.boxShadow = "0 2px 6px rgba(0,0,0,0.05)";
+
+        card.innerHTML = `
+          <img src="${p.imageUrl || 'img/default.jpg'}" style="width:100%;height:200px;object-fit:cover;">
+          <div style="padding:1rem;">
+            <h4 style="margin:0 0 0.5rem 0;font-size:1.1rem;color:#222;">${p.title}</h4>
+            <p style="margin:0;font-size:0.9rem;color:#555;">${p.description?.slice(0,60) || ''}...</p>
+            <a href="project.html?id=${doc.id}" style="display:inline-block;margin-top:0.8rem;color:#ff6b6b;font-weight:bold;">상세보기 →</a>
+          </div>
+        `;
+        projectContainer.appendChild(card);
+      });
     }
+
+    loadProjects();
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-
-<footer class="bg-white text-center text-muted py-4 mt-5 border-top">
-  <div class="container">
-    <p class="mb-1 fw-semibold">🐾 Project.PAW</p>
-    <p class="mb-2">도움은 본능, 연결은 선택</p>
-    <small>© 2025 Project.PAW. All rights reserved.<br>
-    고유번호: 105-82-89397 (프로젝트파우)</small>
-  </div>
-</footer>
-
-
-
-  <div id="pawToast" class="toast align-items-center text-bg-dark border-0" role="status" aria-live="polite" aria-atomic="true">
-    <div class="d-flex">
-      <div class="toast-body">완료되었습니다.</div>
-      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-    </div>
-  </div>
-  <!-- Lightbox Modal -->
-  <div class="modal fade" id="lightboxModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-xl">
-      <div class="modal-content border-0 shadow-lg rounded-4">
-        <div class="modal-body p-0">
-          <img id="lightboxTarget" src="" alt="미리보기" class="w-100" style="object-fit:contain;max-height:80vh">
-        </div>
-      </div>
-    </div>
-  </div>
 </body>
 </html>
